fix: adjust padding for movie release year for better alignment

--- a/public/style.css
+++ b/public/style.css
@@ -187,7 +187,7 @@ body {
 }
 .movie-list__release-year {
   font-size: 1rem;
-  padding: 1rem;
+  padding-top: 1rem;
 }
 .movie-list .fa-regular {
   font-size: 1.25rem;
