--- a/src/scss/_movie-card.scss
+++ b/src/scss/_movie-card.scss
@@ -75,7 +75,7 @@
 
   &__release-year {
     font-size: 1rem;
-    padding: 1rem;
+    padding-top: 1rem;
   }
 
   .fa-regular {
